tests/ui/sqlite_strict_affinity/fail/strict_rejects_numeric.rs
use drizzle::sqlite::prelude::*;

#[SQLiteTable(strict)]
struct StrictNumeric {
    #[column(primary)]
    id: i32,
    #[column(numeric)]
    amount: i64,
}

fn main() {
    let _ = StrictNumeric::default();
}
